<resources>
    <string name="app_name">queue</string>
    <string name="title_admin_dashboard">Admin Dashboard</string>
    <string name="label_reservations">RESERVATIONS</string>
    <string name="label_queue">QUEUE</string>
    <string name="label_wait_time">WAIT TIME</string>
    <string name="label_settings">SETTINGS</string>
    <string name="label_create_restaurant">Create Restaurant</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="check_in">Check In</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="view_status">View Status</string>
    <string name="view_reservation">View Reservation</string>
    <string name="notifications">Notifications</string>
    <string name="user_menu">User Menu</string>
    <string name="arrived">Arrived</string>



</resources>